--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'GN'
 - !lcsh 'Mausoleum of Theodoric (Ravenna, Italy)'
+- GITenberg
 title: 'Das Grabmal des Theoderich zu Ravenna und seine Stellung in der
 
   Architekturgeschichte'
